--- a/ng-TrunkRecords-eCommerceSite-Client/src/app/apparel/apparel.component.scss
+++ b/ng-TrunkRecords-eCommerceSite-Client/src/app/apparel/apparel.component.scss
@@ -1,12 +1,11 @@
-h2,h3{
+h2,
+h3 {
   font-family: "Epilogue", sans-serif;
 }
 
-main{
-  background-color: #F2F2F2;
+main {
+  background-color: #f2f2f2;
 }
-
-
 .apparel-heading {
   font-size: 3rem;
   font-weight: bold;
