--- a/ng-TrunkRecords-eCommerceSite-Client/src/app/header/header.component.scss
+++ b/ng-TrunkRecords-eCommerceSite-Client/src/app/header/header.component.scss
@@ -1,13 +1,12 @@
-
-a{
-  font-family:'Epilogue', sans-serif;;
+a {
+  font-family: "Epilogue", sans-serif;
   font-size: 2rem;
   color: #030a8c !important;
 }
-a:hover{
+a:hover {
   color: #fff !important;
 }
-header{
+header {
   background-color: #a69b03;
 }
 
@@ -51,7 +50,6 @@ header{
 }
 .header-ads {
   height: 20px;
-
 }
 
 .btn-outline-success {
