--- a/ng-TrunkRecords-eCommerceSite-Client/src/app/home/home.component.scss
+++ b/ng-TrunkRecords-eCommerceSite-Client/src/app/home/home.component.scss
@@ -8,13 +8,13 @@
 }
 
 .header-heroimg h1 {
-  font-family:'Epilogue', sans-serif;;
+  font-family: "Epilogue", sans-serif;
   font-size: 6rem;
   font-weight: bold;
   color: #030a8c;
 }
 
-button{
+button {
   height: 150px;
   width: 150px;
   border: 1px solid #030a8c;
@@ -24,7 +24,7 @@ button{
   background-color: #a69b03;
 }
 
-button:hover{
+button:hover {
   color: #fff;
   background-color: #030a8c;
 }
