--- a/ng-TrunkRecords-eCommerceSite-Client/src/app/appareldetails/appareldetails.component.html
+++ b/ng-TrunkRecords-eCommerceSite-Client/src/app/appareldetails/appareldetails.component.html
@@ -1,28 +1,31 @@
 <app-header></app-header>
 <main>
-    <section class="container">
-        <div class="mt-5">
-            <p class="mt-5">
-                <a routerLink="../../apparel"> APPAREL</a> > {{ product.product_name | uppercase }}
-            </p>
-            <div class="row">
-                <div class="apparel-item col-sm-12 col-md-6">
-                    <img [src]="product.product_image1" [alt]="product.product_name" />
-                </div>
-                <div class="apparel-item col-sm-12 col-md-6">
-                    <img [src]="product.product_image2" [alt]="product.product_name" />
-                </div>
-            </div>
-            <h2 class="mt-3 apparel-item-title">
-                {{ product.product_name | titlecase }}
-            </h2>
-            <p>{{ product.product_desc }}</p>
-            <p class="apparel-item-price">
-                {{ product.product_price | currency: "CAD" }}
-            </p>
-            <availability [inStock]="changeboolean(product.product_availability)"></availability>
-            <button class="mt-3 apparel-btn">Add to Cart</button>
+  <section class="container">
+    <div class="mt-5">
+      <p class="mt-5">
+        <a routerLink="../../apparel"> APPAREL</a> >
+        {{ product.product_name | uppercase }}
+      </p>
+      <div class="row">
+        <div class="apparel-item col-sm-12 col-md-6">
+          <img [src]="product.product_image1" [alt]="product.product_name" />
         </div>
-    </section>
+        <div class="apparel-item col-sm-12 col-md-6">
+          <img [src]="product.product_image2" [alt]="product.product_name" />
+        </div>
+      </div>
+      <h2 class="mt-3 apparel-item-title">
+        {{ product.product_name | titlecase }}
+      </h2>
+      <p>{{ product.product_desc }}</p>
+      <p class="apparel-item-price">
+        {{ product.product_price | currency: "CAD" }}
+      </p>
+      <availability
+        [inStock]="changeboolean(product.product_availability)"
+      ></availability>
+      <button class="mt-3 apparel-btn">Add to Cart</button>
+    </div>
+  </section>
 </main>
 <app-footer></app-footer>
